--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
                     <tr style="mso-yfti-irow:0;mso-yfti-firstrow:yes">
                         <td width="200" style="border:solid 0px Blue;width:154.5pt;padding:0cm 0cm 0cm 0cm">
                             <p class="MsoNormal"><span style="font-size:13.0pt;font-family:&quot;Arial&quot;,&quot;sans-serif&quot;; color:black;mso-no-proof:yes">
-                                <img width="220" height="120" src="figures/demo.mp4" align="center" alt="Description: picture" v:shapes="Picture_x0020_2"></span>
+                                <video  width="220" height="120" muted autoplay loop>
+                                    <source src="figures/demo.mp4" type="video/mp4">
+                                <!-- <video width="220" height="120" src="figures/demo.mp4" align="center" alt="Description: picture" v:shapes="Picture_x0020_2"></span> -->
                             <span style="font-size:13.0pt;font-family: &quot;Arial&quot;,&quot;sans-serif&quot;;color:black"><o:p></o:p></span></p>
                         </td>
                         <td width="800" style="border:solid 0px Blue;width:595.5pt;padding:0cm 0cm 0cm 0cm">
