--- a/NeuralSlice/index.html
+++ b/NeuralSlice/index.html
@@ -49,8 +49,10 @@
         </p>
         <!-- <p class="text-center" style="font-size: 20px; "><i>IEEE International Conference on Computer Vision (ICCV), 2021</i></p> -->
         <div class="main">
-            <img src="figures/teaser.jpg" width = "100%">
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Our method deforms a 4D template into a 4D object. When the fourth dimension w changes, different slices of our 4D object can represent different 3D meshes. Among these 3D meshes, they have different shapes and different topologies.
+            <video  width="90%" , height="90%" muted autoplay loop src="demo.mp4" type="video/mp4">
+                <!-- <source src="./demo.mp4" type="video/mp4"> -->
+            <!-- <img src="figures/teaser.jpg" width = "100%"> -->
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <h5>Our method deforms a 4D template into a 4D object. When the fourth dimension w changes, different slices of our 4D object can represent different 3D meshes. Among these 3D meshes, they have different shapes and different topologies.</h5>
             
             <div class="abstract">
                 <h2 >
