--- a/index.html
+++ b/index.html
@@ -59,37 +59,37 @@
         <h3 style="font-size: 16pt">Research</h3>
         <hr>
         <ul>
-            <table border="0" cellspacing="30" cellpadding="0" width="1024" style="border-collapse:separate; border-spacing:30px; width: 1024;margin-left: -60px">
-                <tbody>
-                    <tr style="mso-yfti-irow:0;mso-yfti-firstrow:yes">
-                        <td width="200" style="border:solid 0px Blue;width:154.5pt;padding:0cm 0cm 0cm 0cm">
-                            <p class="MsoNormal"><span style="font-size:13.0pt;font-family:&quot;Arial&quot;,&quot;sans-serif&quot;; color:black;mso-no-proof:yes">
-                                <video  width="220" height="120" muted autoplay loop>
-                                    <source src="figures/demo.mp4" type="video/mp4">
+            <!-- <table border="0" cellspacing="30" cellpadding="0" width="1024" style="border-collapse:separate; border-spacing:30px; width: 1024;margin-left: -60px"> -->
+                <!-- <tbody> -->
+                    <!-- <tr style="mso-yfti-irow:0;mso-yfti-firstrow:yes"> -->
+                        <!-- <td width="200" style="border:solid 0px Blue;width:154.5pt;padding:0cm 0cm 0cm 0cm"> -->
+                            <!-- <p class="MsoNormal"><span style="font-size:13.0pt;font-family:&quot;Arial&quot;,&quot;sans-serif&quot;; color:black;mso-no-proof:yes"> -->
+                                <!-- <video  width="220" height="120" muted autoplay loop> -->
+                                    <!-- <source src="figures/demo.mp4" type="video/mp4"> -->
                                 <!-- <video width="220" height="120" src="figures/demo.mp4" align="center" alt="Description: picture" v:shapes="Picture_x0020_2"></span> -->
-                            <span style="font-size:13.0pt;font-family: &quot;Arial&quot;,&quot;sans-serif&quot;;color:black"><o:p></o:p></span></p>
-                        </td>
-                        <td width="800" style="border:solid 0px Blue;width:595.5pt;padding:0cm 0cm 0cm 0cm">
-                            <h4><span style="font-family:&quot;Arial&quot;,&quot;sans-serif&quot;;color:black">NeuralSlice: Learning to Reconstruct 4D Objects<o:p></o:p></span></h4>
-                            <p><span class="SpellE"><span style="font-size:13.0pt;font-family:&quot;Arial&quot;,&quot;sans-serif&quot;;
-                                color:black"> <b>Chenbo Jiang</b></span></span></p>
+                            <!-- <span style="font-size:13.0pt;font-family: &quot;Arial&quot;,&quot;sans-serif&quot;;color:black"><o:p></o:p></span></p> -->
+                        <!-- </td> -->
+                        <!-- <td width="800" style="border:solid 0px Blue;width:595.5pt;padding:0cm 0cm 0cm 0cm"> -->
+                            <!-- <h4><span style="font-family:&quot;Arial&quot;,&quot;sans-serif&quot;;color:black">NeuralSlice: Learning to Reconstruct 4D Objects<o:p></o:p></span></h4> -->
+                            <!-- <p><span class="SpellE"><span style="font-size:13.0pt;font-family:&quot;Arial&quot;,&quot;sans-serif&quot;; -->
+                                <!-- color:black"> <b>Chenbo Jiang</b></span></span></p> -->
                             <!-- <p><em><span style="font-size:13.0pt;font-family:&quot;Arial&quot;,&quot;sans-serif&quot;; color:black">
                                 In Proc. IEEE International Conference on Computer Vision (<b>ICCV</b>), Montreal, Canada, Oct 11-17, 2021. </span></em></p> -->
-                            <p><span style="font-size:13.0pt;font-family:&quot;Arial&quot;,&quot;sans-serif&quot;;color:black">
-                                [<a href="./NeuralSlice/index.html" one-link-mark="yes"><span class="style91">Project</span></a>]
-                                [<a href="./NeuralSlice/NeuralSlice.pdf" one-link-mark="yes"><span class="style91">PDF</span></a>]
-                                [<a href="https://github.com/jiang25262/NeuralSlice" one-link-mark="yes"><span class="style91">Code</span></a>]
+                            <!-- <p><span style="font-size:13.0pt;font-family:&quot;Arial&quot;,&quot;sans-serif&quot;;color:black"> -->
+                                <!-- [<a href="./NeuralSlice/index.html" one-link-mark="yes"><span class="style91">Project</span></a>] -->
+                                <!-- [<a href="./NeuralSlice/NeuralSlice.pdf" one-link-mark="yes"><span class="style91">PDF</span></a>] -->
+                                <!-- [<a href="https://github.com/jiang25262/NeuralSlice" one-link-mark="yes"><span class="style91">Code</span></a>] -->
 
 
                                 <!-- [a href="publications/ICCV.bib"<span class="style91">BibTeX</span>] -->
 
-                                <o:p></o:p></span></p>
-                            </td>
-                    </tr>
+                                <!-- <o:p></o:p></span></p> -->
+                            <!-- </td> -->
+                    <!-- </tr> -->
                   
 
-           </tbody>
-        </table>
+           <!-- </tbody> -->
+        <!-- </table> -->
         
 
         </ul>
