--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h5>Undergraduate student</h5>
             <h5>Major in Computer Science</h5>
             <h5>Nanjing University of Science and Technology Zijin College</h5>
-            <h5>Email: cbjiang@foxmail.com</h5>
+            <h5>Email: cbjiang[～A～T～]foxmail.com</h5>
             <h5><a href="./figures/CV.pdf">CV</a>&nbsp;&nbsp;&nbsp;&nbsp;</a></h5>
             
             <br>
