--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h5>Undergraduate student</h5>
             <h5>Major in Computer Science</h5>
             <h5>Nanjing University of Science and Technology Zijin College</h5>
-            <h5>Email: cbjiang[～A～T～]foxmail.com</h5>
+            <h5>Email: cbjiang[~a~t~]foxmail.com</h5>
             <h5><a href="./figures/CV.pdf">CV</a>&nbsp;&nbsp;&nbsp;&nbsp;</a></h5>
             
             <br>
@@ -49,8 +49,14 @@
 
     </div>
     <h6>
-        I am currently a third-year undergraduate student in Nanjing University of Science and Technology Zijin College. Degree GPA: 3.91, Overall: 89.8, Rank: 2/114. Looking for research opportunities.
+        I am currently a research intern in Insitute of Computing Technology, Chinese Academy of Science and a fourth-year undergraduate student in Nanjing University of Science and Technology Zijin College. Degree GPA: 3.91, Overall: 89.8, Rank: 2/114. Looking for PhD possitions in 2024fall.
     </h6>
+    <br>
+
+    <h3 style="font-size: 16pt">Expericence</h3>
+    <h6>Research Intern: Insitute of Computing Technology, Chinese Academy of Science 2022.7~Now</h6>
+    <br>
+
     <h3 style="font-size: 16pt">Research Interests</h3>
     <h6>Deep Learning for 3D/4D vision, Geometric Deep Learning, Character Animation, Reinforcement Learning, Geometry Processing, etc.</h6>
     <br>
@@ -104,7 +110,7 @@
 
 
 <footer>
-    <center>&copy; Chenbo Jiang | Last updated: Jan 2022</center>
+    <center>&copy; Chenbo Jiang | Last updated: Sept 2022</center>
     <!-- <script type="text/javascript" src="//ra.revolvermaps.com/0/0/6.js?i=0mgfjf6uo3u&amp;m=0&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=0" async="async"></script> -->
     <!-- </p> -->
 </footer>
