--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     </div>
     <h6>
-        I am currently a research intern in Insitute of Computing Technology, Chinese Academy of Science and a fourth-year undergraduate student in Nanjing University of Science and Technology Zijin College. Degree GPA: 3.91, Overall: 89.8, Rank: 2/114. Looking for PhD possitions in 2024fall.
+        I am currently a research intern in Insitute of Computing Technology, Chinese Academy of Science and a fourth-year undergraduate student in Nanjing University of Science and Technology Zijin College. Degree GPA: 3.83, Overall: 90.03, Rank: 2/114. Looking for PhD possitions in 2024fall.
     </h6>
     <br>
 
@@ -58,7 +58,7 @@
     <br>
 
     <h3 style="font-size: 16pt">Research Interests</h3>
-    <h6>Deep Learning for 3D/4D vision, Geometric Deep Learning, Character Animation, Reinforcement Learning, Geometry Processing, etc.</h6>
+    <h6>3D Deep Learning, 3D Generative Model, Geometric Deep Learning, Embodied AI, Object-centric Learning, etc.</h6>
     <br>
     
     <div>
@@ -76,10 +76,12 @@
                             <span style="font-size:13.0pt;font-family: &quot;Arial&quot;,&quot;sans-serif&quot;;color:black"><o:p></o:p></span></p>
                         </td>
                         <td width="800" style="border:solid 0px Blue;width:595.5pt;padding:0cm 0cm 0cm 0cm">
-                            <h4><span style="font-family:&quot;Arial&quot;,&quot;sans-serif&quot;;color:black">NeuralSlice: Learning to Improve 3D Topology by 4D Geometry<o:p></o:p></span></h4>
-                            <h6><span style="font-family:&quot;Arial&quot;,&quot;sans-serif&quot;;color:black">Key idea: Deform the 4D template with a neural network and slice out a 3D shape.<o:p></o:p></span></h6>
+                            <h5><span style="font-family:&quot;Arial&quot;,&quot;sans-serif&quot;;color:black">NeuralSlice: Neural 3D Triangle Mesh Reconstruction via Slicing 4D Tetrahedral Meshes<o:p></o:p></span></h5>
+                            <h6><span style="font-family:&quot;Arial&quot;,&quot;sans-serif&quot;;color:black">TL;DR: NeuralSlice is a novel approach to representing 3D shapes with flexible topology in a pure explicit
+                                fashion, which represents a 3D shape as the intersection of a 4D deformable tetrahedral mesh and a learnable
+                                4D hyperplane.<o:p></o:p></span></h6>
                             <p><span class="SpellE"><span style="font-size:13.0pt;font-family:&quot;Arial&quot;,&quot;sans-serif&quot;;
-                                 <color:black"> <b>Chenbo Jiang</b> Shwai He</span></span></p>
+                                 <color:black"> <b>Chenbo Jiang</b>, Jie Yang, Shwai He, Yu-Kun Lai and Lin Gao</span></span></p>
                             <!-- <p><em><span style="font-size:13.0pt;font-family:&quot;Arial&quot;,&quot;sans-serif&quot;; color:black">
                                 In Proc. IEEE International Conference on Computer Vision (<b>ICCV</b>), Montreal, Canada, Oct 11-17, 2021. </span></em></p> -->
                             <p><span style="font-size:13.0pt;font-family:&quot;Arial&quot;,&quot;sans-serif&quot;;color:black">
@@ -110,7 +112,7 @@
 
 
 <footer>
-    <center>&copy; Chenbo Jiang | Last updated: Sept 2022</center>
+    <center>&copy; Chenbo Jiang | Last updated: March 2023</center>
     <!-- <script type="text/javascript" src="//ra.revolvermaps.com/0/0/6.js?i=0mgfjf6uo3u&amp;m=0&amp;c=ff0000&amp;cr1=ffffff&amp;f=arial&amp;l=0" async="async"></script> -->
     <!-- </p> -->
 </footer>
