--- a/index.html
+++ b/index.html
@@ -77,9 +77,7 @@
                         </td>
                         <td width="800" style="border:solid 0px Blue;width:595.5pt;padding:0cm 0cm 0cm 0cm">
                             <h5><span style="font-family:&quot;Arial&quot;,&quot;sans-serif&quot;;color:black">NeuralSlice: Neural 3D Triangle Mesh Reconstruction via Slicing 4D Tetrahedral Meshes<o:p></o:p></span></h5>
-                            <h6><span style="font-family:&quot;Arial&quot;,&quot;sans-serif&quot;;color:black">TL;DR: NeuralSlice is a novel approach to representing 3D shapes with flexible topology in a pure explicit
-                                fashion, which represents a 3D shape as the intersection of a 4D deformable tetrahedral mesh and a learnable
-                                4D hyperplane.<o:p></o:p></span></h6>
+                            <h6><span style="font-family:&quot;Arial&quot;,&quot;sans-serif&quot;;color:black">Proceedings of the 40th International Conference on Machine Learning, 2023 (ICML 2023).<o:p></o:p></span></h6>
                             <p><span class="SpellE"><span style="font-size:13.0pt;font-family:&quot;Arial&quot;,&quot;sans-serif&quot;;
                                  <color:black"> <b>Chenbo Jiang</b>, Jie Yang, Shwai He, Yu-Kun Lai and Lin Gao</span></span></p>
                             <!-- <p><em><span style="font-size:13.0pt;font-family:&quot;Arial&quot;,&quot;sans-serif&quot;; color:black">
