--- a/index.html
+++ b/index.html
@@ -155,15 +155,15 @@ background-color: #ffffd0;
           <name>Chenbo Jiang</name>
         </p>
         <p>
-          I am currently a research intern in Insitute of Computing Technology, Chinese Academy of Science and a obtained B.Eng degree  in Nanjing University of Science and Technology Zijin College 2023 June.
+          I am an incomming Ph.D. student at Mila&Mcgill supervised by Prof. Derek Nowrouzezahrai. I am also a research intern at Chinese Academy of Science supervised by Prof. Lin Gao and Prof. Yu-Kun Lai.
         </p>
 
         <p>
-          I am looking for PhD positions in 2024 Fall.
+         
         </p>
         <p align=center>
           <a href="cbjiang@foxmail.com">Email</a> &nbsp/&nbsp
-          <a href="pdf/Chenbo Jiang--CV.pdf">CV</a> &nbsp
+          <a href="./img/poster.jpeg">CV</a> &nbsp
         </p>
         </td>
         <td width="33%">
@@ -216,8 +216,8 @@ background-color: #ffffd0;
   <em>ICML</em>, 2023
         <br>
         <a href="http://geometrylearning.com/neuralslice/">project page</a>
-  /  <a href="http://openreview.net/pdf?id=HGVnUS6OYN"> paper</a>
-
+        / <a href="http://openreview.net/pdf?id=HGVnUS6OYN"> paper</a>
+        / <a  href="./img/jiang.png"> poster  </a>
         <p></p>
         <p>NeuralSlice is a novel approach to representing 3D shapes with flexible topology in a pure explicit fashion, which represents a 3D shape as the intersection of a 4D deformable tetrahedral mesh and a learnable 4D hyperplane.</p>
       </td>
