--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ background-color: #ffffd0;
           <name>Chenbo Jiang</name>
         </p>
         <p>
-          I am an incomming Ph.D. student at Mila&Mcgill supervised by Prof. Derek Nowrouzezahrai. I am also a research intern at Chinese Academy of Science supervised by Prof. Lin Gao and Prof. Yu-Kun Lai.
+          I am an incomming Ph.D. student at Mila&Mcgill supervised by Prof. Derek Nowrouzezahrai. Now I am a visiting student at Weatlake University supervised by Prof. Tailin Wu. Before that, I was a research intern at Chinese Academy of Science supervised by Prof. Lin Gao and Prof. Yu-Kun Lai.
         </p>
 
         <p>
